[tool.poetry]
name = "organattackbot"
version = "0.1.0"
description = ""
authors = ["IndigonaBlue <rdadeveyra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
python-env = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
